stage n add